[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Animations/player_cast_left.tres" type="Animation" id=2]
[ext_resource path="res://Sounds/sound_jump.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/sound_shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://Animations/player_cast_right.tres" type="Animation" id=5]
[ext_resource path="res://Animations/player_idle_left.tres" type="Animation" id=6]
[ext_resource path="res://Animations/player_idle_right.tres" type="Animation" id=7]
[ext_resource path="res://Animations/player_walk_right.tres" type="Animation" id=8]
[ext_resource path="res://Animations/player_walk_left.tres" type="Animation" id=9]
[ext_resource path="res://Images/Player.png" type="Texture" id=10]
[ext_resource path="res://Animations/player_axe_right.tres" type="Animation" id=11]
[ext_resource path="res://Animations/player_pickaxe_right.tres" type="Animation" id=12]
[ext_resource path="res://Animations/playr_hammer_left.tres" type="Animation" id=13]
[ext_resource path="res://Animations/Scenesplayer_pickaxe_left.tres" type="Animation" id=14]
[ext_resource path="res://Animations/player_axe_left.tres" type="Animation" id=15]
[ext_resource path="res://Animations/player_hammer_right.tres" type="Animation" id=16]
[ext_resource path="res://Images/player2.png" type="Texture" id=17]
[ext_resource path="res://Scripts/PickupZone.gd" type="Script" id=18]
[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=20]
[ext_resource path="res://Scenes/UserInterface.tscn" type="PackedScene" id=21]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 22.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14, 26.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.5, 29 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9.875, 32 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 32.5 )

[node name="player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="UserInterface" parent="." instance=ExtResource( 21 )]
visible = true

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 10 )
hframes = 13
vframes = 21
frame = 13

[node name="smoke" type="Node2D" parent="sprite"]
position = Vector2( 20.7312, 3.21187 )
rotation = -1.45648

[node name="bullet_shoot" type="Position2D" parent="sprite"]
position = Vector2( 30.6589, 6.13176 )

[node name="sprite2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 17 )
hframes = 6
vframes = 12

[node name="anim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/player_axe_left = ExtResource( 15 )
anims/player_axe_right = ExtResource( 11 )
anims/player_cast_left = ExtResource( 2 )
anims/player_cast_right = ExtResource( 5 )
anims/player_hammer_right = ExtResource( 16 )
anims/player_idle_left = ExtResource( 6 )
anims/player_idle_right = ExtResource( 7 )
anims/player_pickaxe_left = ExtResource( 14 )
anims/player_pickaxe_right = ExtResource( 12 )
anims/player_walk_left = ExtResource( 9 )
anims/player_walk_right = ExtResource( 8 )
anims/playr_hammer_left = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.291992, 5.5 )
shape = SubResource( 2 )

[node name="sound_jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="sound_shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Tools" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Hurtbox" parent="." instance=ExtResource( 20 )]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, 5.5 )
shape = SubResource( 6 )

[node name="PickupZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
position = Vector2( 0.5, 5 )
shape = SubResource( 3 )

[node name="Axe" parent="." instance=ExtResource( 19 )]
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="Axe"]
position = Vector2( 29.125, 2 )
shape = SubResource( 5 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Axe"]
position = Vector2( -28, 1.5 )
shape = SubResource( 7 )
disabled = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_entered"]
[connection signal="body_exited" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_exited"]
